refactor: stream 삭제하고 Repository에서 반환